--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia temporibus aperiam, similique assumenda expedita molestias maxime, excepturi dolor voluptates dolores ducimus pariatur asperiores suscipit cumque perspiciatis tempore, veritatis magnam fugiat.
     </p>
-
+    <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla ducimus sunt quo accusamus fuga, quam reiciendis cum in fugit, architecto pariatur eligendi a veritatis nam atque soluta, modi quae? Doloribus! 
+    </p>
+    <img src="sea.jpg" alt="">
 </body>
 </html>
