Navigation for new Paragraph

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla ducimus sunt quo accusamus fuga, quam reiciendis cum in fugit, architecto pariatur eligendi a veritatis nam atque soluta, modi quae? Doloribus! 
     </p>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore maiores quo harum magnam vel assumenda voluptatum? Eaque earum, eveniet assumenda fuga reiciendis pariatur, velit reprehenderit odio, consectetur obcaecati sapiente ipsum!
+    </p>
     <img src="sea.jpg" alt="">
 </body>
 </html>
